# calorie-counter

./: .gitignore  DESKTOP_ALTERNATIVES.md  README.md  package-lock.json  package.json
backend/: .env.example  app.py  requirements.txt
frontend/: index.html  login.html  login.ts  main.js  main.ts  manifest.json  style.css  sw.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
