[package]
name = "calorie-counter"
version = "1.0.0"
description = "AI-powered calorie counting desktop application"
authors = ["you"]
license = ""
repository = ""
default-run = "calorie-counter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-shell = "2"

[features]
# this feature is used used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
